--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
 
 <div class="sidebar">
-	<a href="file:///D:/sublime%20files/portfolio/index.html"><img class="logo" src="pigeonlog2.png"></a>
+	<a href="https://o-hx.github.io/portfolio/"><img class="logo" src="images\pigeonlog2.png"></a>
 	<h1>HUAN XUAN</h1>
 	<h2>testing helo there</h2>
 	<hr></hr>
 	<ul>
 		<li><a href="file:///D:/sublime%20files/portfolio/pastwork.html">Past work</a></li>
-		<li>Ongoing projects</li>
+		<li><a href="file:///D:/sublime%20files/portfolio/ongoing.html">Ongoing projects</a></li>
 		<li>Resume</li>
-		<li>Contact</li>
+		<li><a href="mailto:huanxuann@hotmail.com" target="_top">Contact</a></li>
 	</ul>
 
 	<hr></hr>
