--- a/pastwork.html
+++ b/pastwork.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>portfolio</title>
 
-	<link rel="stylesheet" type="text/css" href="stylez.css">
+	<link rel="stylesheet" type="text/css" href="https://o-hx.github.io/portfolio/stylez.css">
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Krub" rel="stylesheet">
 
 
