--- a/ongoing.html
+++ b/ongoing.html
@@ -13,7 +13,7 @@
 
 
 <div class="sidebar">
-  <a href="https://o-hx.github.io/portfolio/"><img class="logo" src="pigeonlog2.png"></a>
+  <a href="https://o-hx.github.io/portfolio/"><img class="logo" src="images\pigeonlog2.png"></a>
   <h1>HUAN XUAN</h1>
   <h2>testing helo there</h2>
   <hr></hr>
@@ -38,7 +38,7 @@
 
 <div class="aligner">
 <div class="clearfix">
-      <img src="unitygif.gif" style="height:50%; width:50%" class="popimage">
+      <img src="images\unitygif.gif" style="height:50%; width:50%" class="popimage">
         
     <h2>Basics of Unity</h2>
     <p>Learning how to use the Unity game engine through Youtube tutorials. I hope to be able to create a simple explorable world with 3D models made in Blender.</p>
