--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<ul>
 		<li><a href="https://o-hx.github.io/portfolio/pastwork.html">Past work</a></li>
 		<li><a href="https://o-hx.github.io/portfolio/ongoing.html">Ongoing projects</a></li>
-		<li>Resume</li>
+		<li><a href="https://o-hx.github.io/portfolio/resume.html">Resume</a></li>
 		<li><a href="mailto:huanxuann@hotmail.com" target="_top">Contact</a></li>
 	</ul>
 
