--- a/resume.html
+++ b/resume.html
@@ -18,9 +18,9 @@
 	<h2>testing helo there</h2>
 	<hr></hr>
 	<ul>
-		<li><a href="file:///D:/sublime%20files/portfolio/pastwork.html">Past work</a></li>
-		<li><a href="file:///D:/sublime%20files/portfolio/ongoing.html">Ongoing projects</a></li>
-		<li><a href="file:///D:/sublime%20files/portfolio/ongoing.html">Resume</a></li>
+		<li><a href="https://o-hx.github.io/portfolio/pastwork.html">Past work</a></li>
+		<li><a href="https://o-hx.github.io/portfolio/ongoing.html">Ongoing projects</a></li>
+		<li><a href="https://o-hx.github.io/portfolio/resume.html">Resume</a></li>
 		<li><a href="mailto:huanxuann@hotmail.com" target="_top">Contact</a></li>
 	</ul>
 
