--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,8 @@
 </div>
 
 <div class="content">
-	<p>hello</p>
+	<h1>Resume</h1>
+	<hr></hr>
 	<embed src="https://drive.google.com/viewerng/
 viewer?embedded=true&url=https://o-hx.github.io/portfolio/Resume_Oh Huan Xuan.pdf" width="90%" height="90%">
 </div>
