--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 
 
 <div class="sidebar">
-	<a href="file:///D:/sublime%20files/portfolio/index.html"><img class="logo" src="images\pigeonlog2.png"></a>
+	<a href="https://o-hx.github.io/portfolio/"><img class="logo" src="images\pigeonlog2.png"></a>
 	<h1>HUAN XUAN</h1>
 	<h2>testing helo there</h2>
 	<hr></hr>
