--- a/pastwork.html
+++ b/pastwork.html
@@ -37,6 +37,8 @@
 	<h1>Past Work</h1>
 	<hr></hr>
 	<h2>Click on the image for more description of the project.</h2>
+
+<div class="cardholder">
 	<div class="card">
   <img src="images\app_thumb.png" style="width:100%" onclick="appPop()" class="thumbpic">
   <div class="cardcontainer">
@@ -76,7 +78,7 @@
     <h2>A collection of posters</h2> 
   </div>
 </div>
-
+</div>
 
 
 </div>
