--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 <div class="content">
 	<p>hello</p>
+	<p><a href="https://o-hx.github.io/portfolio/testcode.html">test</a></p>
 </div>
 
 </body>
