--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<h2>testing helo there</h2>
 	<hr></hr>
 	<ul>
+		<li><a href="https://o-hx.github.io/portfolio/testcode.html">test</a></li>
 		<li><a href="https://o-hx.github.io/portfolio/pastwork.html">Past work</a></li>
 		<li><a href="https://o-hx.github.io/portfolio/ongoing.html">Ongoing projects</a></li>
 		<li><a href="https://o-hx.github.io/portfolio/resume.html">Resume</a></li>
@@ -32,7 +33,7 @@
 
 <div class="content">
 	<p>hello</p>
-	<p><a href="https://o-hx.github.io/portfolio/testcode.html">test</a></p>
+	
 </div>
 
 </body>
